# ish-worktool

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  install.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
docker/: docker-compose.yml.j2
docker/oracle/: Dockerfile  README.md
docker/oracle/scripts/: check_space.sh  check_status.sh  create_db.sh  create_listener.sh  drop_user.sh  manage-init-xe.sh  manage-xe.sh  prepare_db.sh  prepare_is.sh  prepare_tablespaces.sh  prepare_user.sh  restart_db.sh  shrink_datafiles.sh
gradle/: development.j2  environment.j2  envrc.j2  gradle.j2  index.j2  sdkman  version-mapping.yaml
license/: license.xml
scripts/: Pipfile  README.md  Requirements.txt  main.py  setup.py
scripts/workTools/: __init__.py
scripts/workTools/icm/: build_componentset.py
src/: main.py
src/workTools/: __init__.py
src/workTools/icm/: add_componentset.py  list_icm.py  project.py  setup_icm.py  update_icm.py  utils.py  workdir.py
